--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,8 +4,16 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.6.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/material": "^6.4.4",
+    "@mui/x-date-pickers": "^7.26.0",
+    "@mui/x-date-pickers-pro": "^7.26.0",
     "@reduxjs/toolkit": "^2.5.0",
     "antd": "^5.23.3",
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
