--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,9 +23,12 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "web-vitals": "^2.1.4"
+    "slick-carousel": "^1.8.1",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
