--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,11 @@ jobs:
           cd front-end
           npm run build
 
+      - name: Start (front-end)
+        run: |
+          cd front-end
+          npm run start
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
@@ -50,3 +55,8 @@ jobs:
         run: |
           cd server
           npm install
+
+      - name: Start (server)
+        run: |
+          cd server
+          npm run start
