--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,6 +2,7 @@
   "name": "hotel-booking",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://p1aymouse.github.io/hotel-booking",
   "dependencies": {
     "@ant-design/icons": "^5.6.0",
     "@emotion/react": "^11.14.0",
