--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,15 +9,15 @@
     "@mui/material": "^6.4.6",
     "@mui/x-date-pickers": "^7.26.0",
     "@reduxjs/toolkit": "^2.5.0",
-    "axios": "^1.7.9",
+    "axios": "1.8.2",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
-    "i18next": "^24.2.2",
+    "i18next": "^23.16.8",
     "i18next-browser-languagedetector": "^8.0.3",
     "i18next-http-backend": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.4.0",
+    "react-i18next": "^14.1.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
@@ -32,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "eslintConfig": {
     "extends": [
@@ -57,9 +58,13 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
+    "@eslint/js": "^9.26.0",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
+    "eslint": "^9.26.0",
+    "eslint-plugin-react": "^7.37.5",
     "file-loader": "^6.2.0",
+    "globals": "^16.1.0",
     "html-webpack-plugin": "^5.6.3",
     "sass": "^1.85.0",
     "sass-loader": "^16.0.5",
