--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "1.8.2",
     "dayjs": "^1.11.13",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "formik": "^2.4.6",
     "i18next": "^23.16.8",
     "i18next-browser-languagedetector": "^8.0.3",
@@ -34,7 +35,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint:css": "stylelint \"src/**/*.scss\""
+    "stylelint": "stylelint \"src/**/*.scss\""
   },
   "eslintConfig": {
     "extends": [
