--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "i18next": "^23.16.8",
     "i18next-browser-languagedetector": "^8.0.3",
     "i18next-http-backend": "^3.0.2",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.3",
